# tictactoe-AI

./: .gitignore  CMakeLists.txt  README.md
include/: agent.h  board.h  game.h
src/: agent.cpp  board.cpp  game.cpp  main.cpp
